infra/k8s/development/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: development
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: europe-west1-docker.pkg.dev/windy-skyline-490617-g7/autokratech-registry/backend:latest
        ports:
        - containerPort: 8001
