infra/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/proxy-body-size":"10m","nginx.ingress.kubernetes.io/proxy-read-timeout":"60","nginx.ingress.kubernetes.io/rewrite-target":"/$2"},"name":"autokratech-ingress","namespace":"development"},"spec":{"ingressClassName":"nginx","rules":[{"host":"34.6.55.176.nip.io","http":{"paths":[{"backend":{"service":{"name":"backend-svc","port":{"number":8001}}},"path":"/api(/|$)(.*)","pathType":"Imple [...]
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  generation: 3
  name: autokratech-ingress
  namespace: development
spec:
  ingressClassName: nginx
  rules:
  - host: 34.6.55.176.nip.io
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8001
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /(.*)
        pathType: ImplementationSpecific
  - host: autokratech.duckdns.org
    http:
      paths:
      - backend:
          service:
            name: backend-svc
            port:
              number: 8001
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /(.*)
        pathType: ImplementationSpecific
  loadBalancer:
    ingress:
    - ip: 34.6.55.176
